adds multiple images and the ability to select by breed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
 <h1>Random Dog Pictures</h1>
-<img src="./dog.jpeg">
-<button>New Picture!</button>
+<p>Select Your Favorite Breed</p>
+<div class="custom-select">
+<select class="dog-selector"></select>
+</div>
+<button>Get Pictures!</button>
+<div class="image-gallery">
+  <img class="img img-0">
+  <img class="img img-1">
+  <img class="img img-2">
+  <img class="img img-3">
+</div>
 </body>
+<footer>
+  <small>Thanks to <a href="https://unsplash.com" target="_blank">Unsplash</a> for default images and <a href="https://dog.ceo/dog-api/" target="_blank">Dog CEO</a> for random image API and breeds list.</small>
+</footer>
 </html>
