fixes path to OG image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="Random Dog Image Generator">
     <meta property="og:description" content="Single page application that retrieves random images of dogs by selected breed">
-    <meta property="og:image" content="./screenshot.png">
+    <meta property="og:image" content="https://heidifryzell.com/random-dog-photo/screenshot.png">
     <meta property="og:url" content="https://heidifryzell.com/random-dog-photo/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
