changes site title

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       gtag("config", "G-SF8R56H54Q");
     </script>
     <script src="app.js" defer></script>
-    <title>Random Dog Image Generator</title>
+    <title>Random Dog Photo Generator</title>
   </head>
   <body>
-    <h1>Random Dog Pictures</h1>
+    <h1>Random Dog Photos</h1>
     <p>Select Your Favorite Breed</p>
     <div class="custom-select">
       <select class="dog-selector"></select>
