--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="Random Dog Image Generator">
-    <meta property="og:description" content="Single page application that retrieves random images of dogs by selected breed">
-    <meta property="og:image" content="https://heidifryzell.com/random-dog-photo/screenshot.png">
-    <meta property="og:url" content="https://heidifryzell.com/random-dog-photo/">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="en_US">
-    <meta property="og:site_name" content="Heidi Fryzell">
+    <meta property="og:title" content="Random Dog Image Generator" />
+    <meta
+      property="og:description"
+      content="Single page application that retrieves random images of dogs by selected breed"
+    />
+    <meta
+      property="og:image"
+      content="https://heidifryzell.com/random-dog-photo/screenshot.png"
+    />
+    <meta
+      property="og:url"
+      content="https://heidifryzell.com/random-dog-photo/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Heidi Fryzell" />
+    <link
+      rel="stylesheet"
+      id="font-awesome-css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css?ver=6.5.1"
+      type="text/css"
+      media="all"
+    />
     <link rel="stylesheet" href="styles.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -29,25 +45,37 @@
     <title>Random Dog Photo Generator</title>
   </head>
   <body>
-    <h1>Random Dog Photos</h1>
-    <p>Select Your Favorite Breed</p>
-    <div class="custom-select">
-      <select class="dog-selector"></select>
+    <div class="app-content">
+      <h1>Random Dog Photos</h1>
+      <div class="custom-select">
+        <select class="dog-selector"></select>
+      </div>
+      <button class="more-dogs">More Dogs!</button>
+      <div class="image-gallery">
+        <img class="img img-0" />
+        <img class="img img-1" />
+        <img class="img img-2" />
+        <img class="img img-3" />
+      </div>
     </div>
-    <button>Get Pictures!</button>
-    <div class="image-gallery">
-      <img class="img img-0" />
-      <img class="img img-1" />
-      <img class="img img-2" />
-      <img class="img img-3" />
-    </div>
+    <footer>
+      <p>
+        <small
+          >Thanks to
+          <a href="https://unsplash.com" target="_blank">Unsplash</a> for
+          default images and
+          <a href="https://dog.ceo/dog-api/" target="_blank">Dog CEO</a> for
+          random image API and breeds list.</small
+        >
+      </p>
+      <p>
+        <a href="https://heidifryzell.com"
+          ><i class="fa-solid fa-terminal"></i
+        ></a>
+        <a href="https://heidifryzell.com">heidifryzell.com</a> &copy;<span
+          id="copyrightYear"
+        ></span>
+      </p>
+    </footer>
   </body>
-  <footer>
-    <small
-      >Thanks to <a href="https://unsplash.com" target="_blank">Unsplash</a> for
-      default images and
-      <a href="https://dog.ceo/dog-api/" target="_blank">Dog CEO</a> for random
-      image API and breeds list.</small
-    >
-  </footer>
 </html>
